EDO-94: fixed wrapping of achieved badges in teams status

--- a/src/main/webapp/app/teams/teams-status.scss
+++ b/src/main/webapp/app/teams/teams-status.scss
@@ -37,6 +37,8 @@
                 padding-top: 0;
             }
         }
+        .teams-status-achievements-badges {
+        }
 
     }
 }
